--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "aws-amplify": "^4.3.3",
     "axios": "^0.23.0",
     "dotenv": "^8.2.0",
+    "mdb-react-ui-kit": "^2.0.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
